--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 
 *.xcuserstate
 
-CoreDataDemo.xcodeproj/project.xcworkspace/xcuserdata/YGuan.xcuserdatad/UserInterfaceState.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
+project.xcworkspace/
+xcuserdata/
+UserInterface.xcuserstate
+
+
